Refactor, step 3 of 4